--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="bg_color">#DEE5E0</color>
     <color name="gray_sto">#BDBDBD</color>
     <color name="btn_color">#85BD71</color>
+    <color name="primarydark_color">#7BB068</color>
 
 </resources>
