--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
-        tools:context=".SettingActivity">
+        tools:context=".Setting.SettingActivity">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/bird_img"
