--- a/app/src/main/res/layout/addmusic.xml
+++ b/app/src/main/res/layout/addmusic.xml
@@ -209,6 +209,17 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/plusbtn"
+                android:src="@drawable/plusbtn"
+                app:layout_constraintTop_toBottomOf="@+id/musicplaycontroll"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
